# AuditStrategyTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/NewAuditStrategy/: new_audit_strategy.h
source/: new_audit_strategy.cpp
